# wasm_splatrenderer

./: .gitignore  .gitmodules  CMakeLists.txt
data/shader/: gsplat.fs  gsplat.vs
script/: pyproject.toml  resize.py
src/: app.cpp  app.fwd.h  app.h  camera.cpp  camera.h  gl.h  load.cpp  load.h  main.cpp  model.cpp  model.fwd.h  model.h  splat.cpp  splat.h  utils.cpp  utils.h
